--- a/.env
+++ b/.env
@@ -1,29 +1,7 @@
-# مشخصات API تلگرام
 API_ID=26438691
 API_HASH=b9a6835fa0eea6e9f8a87a320b3ab1ae
+BOT_TOKEN=8031070707:AAGaymxEcuqKCWO0f-dyPK0OqvnCXtUw570
 
-# توکن ربات از BotFather
-BOT_TOKEN=8031070707:AAEf5KDsmxL2x1_iZ_A1PgrGuqPL29TaW8A
-BOT_USERNAME=BoxOfficeUploaderbot
+MONGO_URI=mongodb+srv://BoxOffice:136215@boxofficeuploaderbot.2howsv3.mongodb.net/?retryWrites=true&w=majority&appName=BoxOfficeUploaderBot
 
-# آیدی‌های ادمین‌ها
 ADMIN_IDS=7872708405,6867380442
-
-# اطلاعات دیتابیس MongoDB
-MONGO_URI=mongodb+srv://iran2dehelper:136215@boxofficeuploaderbot.2howsv3.mongodb.net/?retryWrites=true&w=majority&appName=BoxOfficeUploaderBot
-MONGO_DB=boxoffice
-
-# لیست کانال‌های عضویت اجباری
-REQUIRED_CHANNELS=@BoxOfficeMoviiie,@BoxOffice_Irani,@BoxOffice_Animation,@BoxOfficeGoftegu
-
-# عکس خوش‌آمدگویی
-WELCOME_IMAGE=https://telegra.ph/file/8d5b42d58d2bdfc7f1211.jpg
-
-# متن خوش‌آمدگویی
-WELCOME_TEXT=🎬 خوش آمدی به دنیای فیلم و سریال 🎥\nبرای دریافت فایل، حتماً عضو کانال‌ها شو و سپس دکمه «عضو شدم» رو بزن.
-
-# ✅ Optional Join Links (used in inline buttons if needed)
-JOIN_LINK_1=https://t.me/BoxOfficeMoviiie
-JOIN_LINK_2=https://t.me/BoxOffice_Irani
-JOIN_LINK_3=https://t.me/BoxOffice_Animation
-JOIN_LINK_4=https://t.me/BoxOfficeGoftegu
