--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 pyrogram==2.0.106
 tgcrypto
-Flask
-pymongo
-python-dotenv
+pymongo==4.13.2
+python-dotenv==1.0.1
+flask==3.1.1
 qrcode
-
+apscheduler==3.11.0
+pyaes
+nest_asyncio
