--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 pyrogram==2.0.106
 tgcrypto
 pymongo==4.13.2
-python-dotenv==1.0.1
+python-dotenv
 flask==3.1.1
 qrcode
-apscheduler==3.11.0
+apscheduler
 pyaes
 nest_asyncio
