--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: boxoffice-uploaderbot
     env: python
-    buildCommand: ""
-    startCommand: python bot.py
     plan: free
-    autoDeploy: false
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python bot.py"
+    autoDeploy: true
