--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 pyrogram==2.0.106
-tgcrypto
-pymongo==4.13.2
-python-dotenv
-flask==3.1.1
-qrcode
-apscheduler
-pyaes
-nest_asyncio
+tgcrypto==1.2.5
+pymongo[srv]==4.6.3
+flask==3.0.3
+nest_asyncio==1.6.0
+qrcode==7.4.2
