--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 API_ID="26438691"
 API_HASH = "b9a6835fa0eea6e9f8a87a320b3ab1ae"
 
-BOT_TOKEN = "7643217625:AAFIK6gQ1L0iJNJCllWTY07dG3HNstoiw9Q"  # ✅ توکن جدید
+BOT_TOKEN ="7643217625:AAFIK6gQ1L0iJNJCllWTY07dG3HNstoiw9Q"
 
 
 BOT_USERNAME=BoxOfficeUploaderBot
