--- a/.env
+++ b/.env
@@ -1,26 +1,34 @@
-API_ID="26438691"
-API_HASH = "b9a6835fa0eea6e9f8a87a320b3ab1ae"
+# Telegram API
+API_ID=27145047
+API_HASH=9e9672f2f920f277daca3d53502e0b34
 
-BOT_TOKEN ="7643217625:AAFIK6gQ1L0iJNJCllWTY07dG3HNstoiw9Q"
+# Bot token (از BotFather گرفته شده)
+BOT_TOKEN=7780760854:AAHjrEt0cMC3VFPgXxCGEG40ut_zf3fGLMU
 
+# نام کاربری بات (بدون @)
+BOT_USERNAME=BoxUploaderBot
 
-BOT_USERNAME=BoxOfficeUploaderBot
-
+# MongoDB connection string (دقت کن <password> رو با پسورد واقعی عوض کنی)
 MONGO_URI=mongodb+srv://BoxOffice:136215@boxofficeuploaderbot.2howsv3.mongodb.net/?retryWrites=true&w=majority&appName=BoxOfficeUploaderBot
-MONGO_DB_NAME=BoxOfficeUploaderBot
-MONGO_COLLECTION_NAME=files
 
+# نام دیتابیس و کالکشن (اگر تغییر دادی اینجا هم ست کن)
+DB_NAME=BoxOfficeUploaderBot
+COLLECTION_NAME=files
+UPLOAD_STATE_COLLECTION=upload_states
+
+# ادمین‌ها (آیدی عددی تلگرام ادمین‌ها)
 ADMIN_IDS=7872708405,6867380442
+
+# کانال‌های اجباری برای عضویت (با @)
 REQUIRED_CHANNELS=@BoxOffice_Irani,@BoxOfficeMoviiie,@BoxOffice_Animation,@BoxOfficeGoftegu
 
-FLASK_HOST=0.0.0.0
-FLASK_PORT=8080
-RENDER_DEPLOYMENT=true
+# لینک‌های تصاویر خوش‌آمد و تشکر
+WELCOME_IMAGE_URL=https://i.imgur.com/uZqKsRs.png
+THANKS_IMAGE_URL=https://i.imgur.com/fAGPuXo.png
 
-TIMEZONE=Europe/Berlin
+# تایم سکوت (ساعت به صورت 24 ساعته)
+SILENT_MODE_START=22
+SILENT_MODE_END=10
+
+# زمان تاخیر حذف پیام‌ها (ثانیه)
 DELETE_DELAY_SECONDS=30
-
-WELCOME_IMAGE_URL=https://i.imgur.com/MeIulvn.jpeg
-WELCOME_MESSAGE=🎬 به ربات باکس‌آفیس خوش آمدی! لطفاً برای دیدن فایل‌ها ابتدا عضو کانال‌ها شو.
-FILES_MESSAGE=📁 فایل‌های زیر آماده دانلود هستن:
-DELETE_WARNING=⏳ فقط ۳۰ ثانیه فرصت داری فایل‌هارو ذخیره کنی! بعدش پر! 😱🕒
