--- a/.env
+++ b/.env
@@ -32,3 +32,13 @@ SILENT_MODE_END=10
 
 # زمان تاخیر حذف پیام‌ها (ثانیه)
 DELETE_DELAY_SECONDS=30
+ینک‌های تصاویر خوش‌آمد و تشکر
+WELCOME_IMAGE_URL=https://i.imgur.com/uZqKsRs.png
+THANKS_IMAGE_URL=https://i.imgur.com/fAGPuXo.png
+
+# تایم سکوت (ساعت به صورت 24 ساعته)
+SILENT_MODE_START=22
+SILENT_MODE_END=10
+
+# زمان تاخیر حذف پیام‌ها (ثانیه)
+DELETE_DELAY_SECONDS=30
