--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ BOT_TOKEN=7780760854:AAHjrEt0cMC3VFPgXxCGEG40ut_zf3fGLMU
 BOT_USERNAME=BoxUploaderBot
 
 # MongoDB connection string (دقت کن <password> رو با پسورد واقعی عوض کنی)
-MONGO_URI="mongodb+srv://BoxOfficeRobot:136215@boxofficerobot.9jlszia.mongodb.net/?retryWrites=true&w=majority&appName=BoxOfficeRobot"
+MONGO_URI=mongodb+srv://BoxOfficeRobot:136215@boxofficerobot.9jlszia.mongodb.net/?retryWrites=true&w=majority&appName=BoxOfficeRobot
 
 # نام دیتابیس و کالکشن (اگر تغییر دادی اینجا هم ست کن)
 DB_NAME=BoxOfficeUploaderBot
