--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ API_ID=27145047
 API_HASH=9e9672f2f920f277daca3d53502e0b34
 BOT_TOKEN=7780760854:AAHjrEt0cMC3VFPgXxCGEG40ut_zf3fGLMU
 BOT_USERNAME=BoxUploaderBot
-MONGO_URI=mongodb+srv://BoxOfficeRobot:136215@boxofficerobot.9jlszia.mongodb.net/?retryWrites=true&w=majority&appName=BoxOfficeRobot
+mongodb+srv://BoxOfficeRobot:136215@boxofficerobot.9jlszia.mongodb.net/?retryWrites=true&w=majority&appName=BoxOfficeRobot
 DB_NAME=BoxOfficeUploaderBot
 COLLECTION_NAME=files
 UPLOAD_STATE_COLLECTION=upload_states
