--- a/.env
+++ b/.env
@@ -2,14 +2,19 @@ API_ID=27145047
 API_HASH=9e9672f2f920f277daca3d53502e0b34
 BOT_TOKEN=7780760854:AAHjrEt0cMC3VFPgXxCGEG40ut_zf3fGLMU
 BOT_USERNAME=BoxUploaderBot
-mongodb+srv://BoxOfficeRobot:136215@boxofficerobot.9jlszia.mongodb.net/?retryWrites=true&w=majority&appName=BoxOfficeRobot
+
+MONGO_URI=mongodb+srv://BoxOfficeRobot:136215@boxofficerobot.9jlszia.mongodb.net/?retryWrites=true&w=majority&appName=BoxOfficeRobot
+
 DB_NAME=BoxOfficeUploaderBot
 COLLECTION_NAME=files
 UPLOAD_STATE_COLLECTION=upload_states
+
 ADMIN_IDS=7872708405,6867380442
 REQUIRED_CHANNELS=@BoxOffice_Irani,@BoxOfficeMoviiie,@BoxOffice_Animation,@BoxOfficeGoftegu
+
 WELCOME_IMAGE_URL=https://i.imgur.com/uZqKsRs.png
 THANKS_IMAGE_URL=https://i.imgur.com/fAGPuXo.png
+
 DELETE_DELAY_SECONDS=30
 SILENT_MODE_START=22
 SILENT_MODE_END=10
