--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-API_ID=26438691
-API_HASH=b9a6835fa0eea6e9f8a87a320b3ab1ae
-BOT_TOKEN=8172767693:AAHdIxn6ueG6HaWFtv4WDH3MjLOmZQPNZQM
-ADMIN_IDS=7872708405,6867380442
+API_ID=your_api_id
+API_HASH=your_api_hash
+BOT_TOKEN=your_bot_token
+ADMIN_IDS=123456789,987654321
 REQUIRED_CHANNELS=BoxOffice_Irani,BoxOfficeMoviiie,BoxOffice_Animation,BoxOfficeGoftegu
 WELCOME_IMAGE_URL=https://i.imgur.com/zzJ8GRo.png
 THANKS_IMAGE_URL=https://i.imgur.com/jhAtp6W.png
 SILENT_MODE_START=22
 SILENT_MODE_END=10
 DELETE_DELAY_SECONDS=30
-MONGO_URI=mongodb+srv://BoxOffice:136215@boxofficeuploaderbot.2howsv3.mongodb.net/?retryWrites=true&w=majority&appName=BoxOfficeUploaderBot
+MONGO_URI=mongodb+srv://<username>:<password>@your-cluster.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=boxup_db
 COLLECTION_NAME=films
